wordpress-greypixel/mysql-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress-gp
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress-gp
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress-gp
spec:
  selector:
    matchLabels:
      app: wordpress-gp
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress-gp
        tier: mysql
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-gp-persistent-storage
          mountPath: /var/lib/mysql
          subPath: data
      volumes:
      - name: mysql-gp-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-gp-pv-claim
