wordpress-greypixel/wordpress-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-gp
  labels:
    app: wordpress-gp
spec:
  ports:
    - port: 80
  selector:
    app: wordpress-gp
    tier: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress-gp
spec:
  selector:
    matchLabels:
      app: wordpress-gp
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress-gp
        tier: frontend
    spec:
      containers:
      - image: wordpress:latest
        name: wordpress
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
        - name: php-config
          mountPath: /usr/local/etc/php/conf.d/uploads.ini
          subPath: uploads.ini
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
      - name: php-config
        configMap:
          name: wp-php-config
          items:
            - key: uploads.ini
              path: uploads.ini
